	* Big change: loadXML is no longer used, as there's no way to emulate it in Opera.
	  So i just removed it directly; to load an XML string to a DOM, you have to use the 
	  DOMParser object.
	* Added Minesweeper as first sample application, original code kindly donated by
	  Sean Whalen (now maintainer, welcome Sean!)
	* Fixed Opera and Safari issues  thanks to Phil Endecott and Conrad Chu
	* Fixt Sarissa.getText bug (ignored CDATA) thanks to Noah Bast
	* Upgraded JSDoc and ECMAUnit

0.9.5.2 
	* Fixed IE Sarissa.copyChildNodes bug thanks to Bryan Batchelder
	* Added Sarissa.xmlize howto 
    * Fixed documentation errors thanks to R. Mark Volkmann
    * Upgraded JSDoc

0.9.5.1 
	* Added Sarissa.escape and Sarissa.unescape, to convert 
       from and to the fivepredefined XML entities
    * Fixed a bug in Sarissa.xmlize (yup, added escaping ;-)
      
0.9.5
	* Added Sarissa.xmlize which produces XML out of any given 
       ecmascript object and updated JSDoc version/documentation

0.9.4.4 
	* Fixed and deprecated Sarissa.IS_ENABLED_XSLTPROC bug in Moz 
       and added fixcrlf task in build. 

0.9.4.3 
	* Fixed bugs in methods of sarissa_dhtml

0.9.4.2
	* Fixed a bug in transformNode and transformNodeToObject in
       sarissa_ieemu_xslt.js (it was not really working)

0.9.4.1 
	* Fixed a bug in XML loading from URLs and shaped things up a little bit.

0.9.4:
	* NOTE: Deprecated stuff will go away in 0.9.6. You have been warned!
    * Refactored to suport KHTML/Webcore (Konqueror/Safari) 
    * Added some constants to check for availability of features. 
    * the xml property is now deprecated. Use Sarissa.serialize instead
    * transformNode and transformNodeToObject are deprecated
    * Sarissa.setXslParameter is now deprecated
    * First stab at sarissa_dhtml.js
    * Fixed major bug in selectSingleNode
    * Added ecmaunit to distribution
       
0.9.3
	* Fixed readyState bug in finally clause in XMLDocument.prototype.load.